projects/kit/components/input-inline/input-inline.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

tui-input-inline {
    position: relative;
    display: inline-block;
    white-space: nowrap;
    box-sizing: border-box;

    ::spelling-error {
        color: transparent;
    }

    > .t-before {
        padding-right: 0.02em; // to prevent caret shaking
        margin-left: 1px; // to prevent hiding characters in safari
        white-space: pre;
        visibility: hidden;
    }

    > .t-placeholder {
        display: inline-block;
        min-inline-size: 1px;
    }

    > input {
        position: absolute;
        top: 0;
        left: 0;
        background-color: transparent;
        padding: inherit;
        font: inherit;
        color: inherit;
        box-sizing: border-box;
        inline-size: 100%;
        block-size: 100%;
        border-width: 0;
        text-align: inherit;
        letter-spacing: inherit;
        text-indent: inherit;
        text-transform: inherit;
        outline: none;
    }
}

